--- a/package.json
+++ b/package.json
@@ -13,11 +13,17 @@
     "@aws-amplify/ui-react": "^0.2.33",
     "autoprefixer": "^10.1.0",
     "aws-amplify": "^3.3.13",
+    "babel-polyfill": "^6.26.0",
+    "classnames": "^2.2.6",
+    "draft-js": "^0.11.7",
+    "draft-js-export-html": "^1.4.1",
     "email-regex": "^4.0.0",
     "next": "^10.0.0",
     "postcss": "^8.2.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "tailwindcss": "^2.0.2"
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "tailwindcss": "^2.0.2",
+    "uuid": "^8.3.2",
+    "uuidv4": "^6.2.6"
   }
 }
